Fixed spacing/layout issue with zipcode boxes

--- a/assets/sass/pages/_page-with-zip.scss
+++ b/assets/sass/pages/_page-with-zip.scss
@@ -8,11 +8,4 @@
   .page-header {
     max-height: 6em;
   }
-
-  .finder {
-    position: absolute;
-    left: 50%;
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-  }
 }
